--- a/first form exercice/form.css
+++ b/first form exercice/form.css
@@ -9,6 +9,10 @@ form {
     display: flex;
     flex-direction: column;
     gap: 15px;
+    border: 1px solid #ccc;
+    padding: 70px;
+    box-shadow: 10px 10px 5px 1px #ccc;
+    font-weight: 900;
 }
 
 label {
@@ -21,13 +25,18 @@ label {
 input[type="submit"]{
     width: 100px;
     padding: 5px;
+    background: #b8daff;
     
+}
+input[type="submit"]:hover{
+    background-color: #55a1f2;
 }
 input[type="text"],input[type="password"]{
     flex: 1;
     padding: 5px;
     margin-left: 15px;
     box-sizing: border-box;
+    border-color: #ccc;
 }
 
 
